// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extract headings should match snapshot 1`] = `
"1. [[#foo]]
	1. [[#bar]]
		1. [[#baz]]
			1. [[#Something Alt Text|Alt Text]]"
`;

exports[`Extract headings should match snapshot with title 1`] = `
"## Table of Contents
1. [[#foo]]
	1. [[#bar]]
		1. [[#baz]]
			1. [[#Something Alt Text|Alt Text]]"
`;
